sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:12: error: value ++ is not a member of Int
			av++;
                          ^